# kglConferenceCorpusIntro

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: build.yml
docs/: windows_setup.md
kglConferenceCorpusIntro/: __init__.py  main.py
scripts/: get_cc_db.py  install  test
src/: main.py
tests/: basetest.py  test_ConferenceCorpusIntro.py
