[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "kglConferenceCorpusIntro"
requires-python = ">=3.9"
dynamic = ["version", "readme", "dependencies"]


[tool.setuptools.dynamic]
version = {attr = "kglConferenceCorpusIntro.VERSION"}
readme = {file = "README.md"}
dependencies = {file = "requirements.txt"}

[project.scripts]
corpus-db-browser = "kglConferenceCorpusIntro.main:start_corpus_db_browser"